force-app/main/default/objects/Warehouse__c/fields/Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Name__c</fullName>
    <label>Bank Account Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>