force-app/main/default/objects/Warehouse__c/fields/BSB_Number__c.field-meta.xml
<CustomField>
    <fullName>BSB_Number__c</fullName>
    <label>BSB Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>