force-app/main/default/objects/Warehouse__c/fields/Collection_Account_BSB_Change__c.field-meta.xml
<CustomField>
    <fullName>Collection_Account_BSB_Change__c</fullName>
    <label>Collection Account BSB Change</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>