force-app/main/default/objects/Warehouse__c/fields/Collection_Account_Name_Change__c.field-meta.xml
<CustomField>
    <fullName>Collection_Account_Name_Change__c</fullName>
    <label>Collection Account Name Change</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>