force-app/main/default/objects/Warehouse__c/fields/Collection_Account_Number_Change__c.field-meta.xml
<CustomField>
    <fullName>Collection_Account_Number_Change__c</fullName>
    <label>Collection Account Number Change</label>
    <length>9</length>
    <required>true</required>
    <type>Text</type>
</CustomField>