force-app/main/default/objects/Warehouse__c/fields/Collection_Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Collection_Bank_Account_Name__c</fullName>
    <label>Collection Bank Account Name</label>
    <length>16</length>
    <type>Text</type>
</CustomField>