force-app/main/default/objects/Warehouse__c/fields/Collection_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Collection_Bank_Account_Number__c</fullName>
    <label>Collection Bank Account Number</label>
    <length>9</length>
    <required>true</required>
    <type>Text</type>
</CustomField>