force-app/main/default/objects/Warehouse__c/fields/Collection_BSB_Number__c.field-meta.xml
<CustomField>
    <fullName>Collection_BSB_Number__c</fullName>
    <label>Collection BSB Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>