force-app/main/default/objects/Warehouse__c/fields/Disbursal_Bank_Name_Change__c.field-meta.xml
<CustomField>
    <fullName>Disbursal_Bank_Name_Change__c</fullName>
    <label>Disbursal Bank Name Change</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>