force-app/main/default/objects/Warehouse__c/fields/Trust_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Trust_Account_Number__c</fullName>
    <label>Trust Account Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>