force-app/main/default/objects/Warehouse__c/fields/Trust_Bank_Number_Change__c.field-meta.xml
<CustomField>
    <fullName>Trust_Bank_Number_Change__c</fullName>
    <label>Trust Bank Number Change</label>
    <length>9</length>
    <required>true</required>
    <type>Text</type>
</CustomField>