force-app/main/default/objects/Warehouse__c/fields/Trust_BSB_Number__c.field-meta.xml
<CustomField>
    <fullName>Trust_BSB_Number__c</fullName>
    <label>Trust BSB Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>