force-app/main/default/objects/Warehouse__c/validationRules/Bank_Account_Number_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Account_Number_Length</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(NOT(REGEX( Bank_Account_Number__c ,&quot;([0-9]){6,9}&quot;)), NOT(ISBLANK( Bank_Account_Number__c))), AND(NOT(REGEX( Collection_Bank_Account_Number__c ,&quot;([0-9]){6,9}&quot;)), NOT(ISBLANK( Collection_Bank_Account_Number__c))))</errorConditionFormula>
    <errorMessage>Bank Account Number can only contain numbers and length needs to be between 6 to 9</errorMessage>
</ValidationRule>