force-app/main/default/objects/Warehouse__c/validationRules/BSB_Number_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>BSB_Number_Length</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(NOT(REGEX(BSB_Number__c ,&quot;([0-9]){6}&quot;)), NOT(ISBLANK( BSB_Number__c))), AND(NOT(REGEX(Collection_BSB_Number__c ,&quot;([0-9]){6}&quot;)), NOT(ISBLANK( Collection_BSB_Number__c))))</errorConditionFormula>
    <errorMessage>BSB Number Should be consist of 6 Digits.</errorMessage>
</ValidationRule>