force-app/main/default/objects/Warehouse__c/validationRules/Institution_Name_Length_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Institution_Name_Length_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>OR(LEN(Institution_Name__c) &gt; 16, ISNUMBER(Institution_Name__c), ISBLANK(Institution_Name__c))</errorConditionFormula>
    <errorMessage>Institution Name can only contain alphabets and length cannot be greater than 16</errorMessage>
</ValidationRule>