force-app/main/default/objects/Warehouse__c/validationRules/WarehouseDisbursalCollectionBankChecks.validationRule-meta.xml
<ValidationRule>
    <fullName>WarehouseDisbursalCollectionBankChecks</fullName>
    <active>true</active>
    <errorConditionFormula>OR(OR(LEN(Bank_Account_Name__c) &gt; 16, ISNUMBER(Bank_Account_Name__c), ISBLANK(Bank_Account_Name__c)), OR(LEN(Collection_Bank_Account_Name__c) &gt; 16, ISNUMBER(Collection_Bank_Account_Name__c), ISBLANK(Collection_Bank_Account_Name__c)))</errorConditionFormula>
    <errorMessage>Bank Account Name and Collection Bank Account Name can only contain alphabets and length cannot be greater than 16</errorMessage>
</ValidationRule>