force-app/main/default/objects/Warehouse__c/listViews/Warehouse_bank_account_approvals_Warehouse.listView-meta.xml
<ListView>
    <fullName>Warehouse_bank_account_approvals_Warehouse</fullName>
    <filterScope>Queue</filterScope>
    <label>Warehouse bank account approvals</label>
    <queue>Warehouse_bank_account_approvals</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>